processed/gerrit/txt_full/34159.txt
Change:     34159
Subject:    LU-10507 tests: use {save,restore}_layout() in test
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/34159
Change-Id:  I11f4e5dcd486d4f7d08666c462d056041e125365
Project:    fs/lustre-release
Branch:     b2_10
Status:     MERGED
Owner:      Jian Yu
Created:    2019-02-01 08:21:24.000000000
Updated:    2019-02-25 18:17:01.000000000
Patch Set:  3
Insertions: +79
Deletions:  -56
Comments:   2 (0 unresolved)
Topic:      LTS

--- Labels ---
  Code-Review: Patrick Farrell: +1; James Nunez: +1; Andreas Dilger: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, Jian Yu, James Nunez, Patrick Farrell

--- Commit Message ---
LU-10507 tests: use {save,restore}_layout() in test

Revised test cases sanity:test_{27A,65i,65j,65m,406}(),
sanity-pfl:test_10() to use new interfaces to save and restore
layout.

This patch is back-ported from the following one:
Lustre-commit: 7b980e101e172d7d8b43a0db2dcaabc8c8c6c855
Lustre-change: https://review.whamcloud.com/30858

Test-Parameters: trivial testlist=sanity-pfl,sanity

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I11f4e5dcd486d4f7d08666c462d056041e125365
Reviewed-on: https://review.whamcloud.com/34159
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Patrick Farrell <pfarrell@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Nunez <jnunez@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2019-02-01 08:21:24.000000000) ---
Uploaded patch set 1.

--- Message (Jenkins, 2019-02-01 09:44:04.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/3201/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/61535/ : SUCCESS

--- Message (Autotest, 2019-02-01 09:45:22.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-ldiskfs session.

--- Message (Autotest, 2019-02-01 09:45:25.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced custom session. The following test parameters were specified: trivial=true testlist=sanity-pfl,sanity.

--- Message (Andreas Dilger, 2019-02-02 08:07:37.000000000) ---
Patch Set 1: Code-Review+1

--- Message (wc-checkpatch, 2019-02-04 10:31:34.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Maloo, 2019-02-04 16:25:10.000000000) ---
Patch Set 1: Verified-1

Failed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-54vm1: https://testing.whamcloud.com/test_sessions/3781ee11-5450-478a-a517-6015fccef776 ran 4 tests.  1 tests failed: sanity.

--- Message (Maloo, 2019-02-04 16:25:18.000000000) ---
Patch Set 1:

Passed enforced test custom on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-54vm5: https://testing.whamcloud.com/test_sessions/f735bc01-d877-48b5-8795-06d3c184f40a ran 4 tests.

--- Message (Autotest, 2019-02-04 19:46:17.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-ldiskfs session. Requested by jianyu because of LU-11921.

--- Message (Maloo, 2019-02-04 21:56:15.000000000) ---
Patch Set 1:

Failed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Onyx Autotest from onyx-36vm9: https://testing.whamcloud.com/test_sessions/dd039d31-a19a-4231-841b-a62278d8ff2f ran 4 tests.  1 tests failed: sanity.

--- Message (Maloo, 2019-02-07 20:11:36.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-34vm6: https://testing.whamcloud.com/test_sessions/c6efadf7-9542-4410-9a6f-c03421e75359 ran 4 tests.

--- Message (Jian Yu, 2019-02-20 17:37:56.000000000) ---
Patch Set 2: Patch Set 1 was rebased

--- Message (Autotest, 2019-02-20 18:04:43.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2019-02-20 18:04:44.000000000) ---
Patch Set 2:

Trevis Autotest started enforced custom session. The following test parameters were specified: trivial=true testlist=sanity-pfl,sanity.

--- Message (Jenkins, 2019-02-20 18:12:46.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/3577/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/61954/ : SUCCESS

--- Message (Maloo, 2019-02-20 20:05:38.000000000) ---
Patch Set 2:

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-11vm9: https://testing.whamcloud.com/test_sessions/c75fd8a6-4057-49ed-9ea2-34f5b344117f ran 4 tests.

--- Message (Maloo, 2019-02-20 20:17:33.000000000) ---
Patch Set 2: Verified+1

Passed enforced test custom on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-4vm1: https://testing.whamcloud.com/test_sessions/f260c293-ea28-4cec-a54a-e8c08a0ecbac ran 4 tests.

--- Message (wc-checkpatch, 2019-02-21 03:43:01.000000000) ---
Patch Set 2:

(1 comment)

1 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Jian Yu, 2019-02-21 06:27:00.000000000) ---
Patch Set 2:

Hi Patrick and James,

Could one of you please give this back-ported patch a secondary review? Thank you.

--- Message (Patrick Farrell, 2019-02-21 15:30:39.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-02-22 08:07:55.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  In file included from /home/green/git/lustre-release/lustre/osd-zfs/osd_handler.c:53:0:
 /home/green/git/lustre-release/lustre/osd-zfs/osd_internal.h: In function ‘osd_sa_handle_get’:
 /home/green/git/lustre-release/lustre/osd-zfs/osd_internal.h:774:2: error: implicit declaration of function ‘refcount_add’ [-Werror=implicit-function-declaration]
   refcount_add(&dn->dn_bonus->db_holds, osd_obj_tag);
   ^

--- Message (Oleg Drokin, 2019-02-22 08:46:13.000000000) ---
Patch Set 2:

> Cannot build patch due to 14, messages:
 > 
 > In file included from /home/green/git/lustre-release/lustre/osd-zfs/osd_handler.c:53:0:
 > /home/green/git/lustre-release/lustre/osd-zfs/osd_internal.h: In
 > function ‘osd_sa_handle_get’:
 > /home/green/git/lustre-release/lustre/osd-zfs/osd_internal.h:774:2:
 > error: implicit declaration of function ‘refcount_add’
 > [-Werror=implicit-function-declaration]
 > refcount_add(&dn->dn_bonus->db_holds, osd_obj_tag);
 > ^

I guess ignore this for now since the bot clearly was not supposed to pick this patch.

--- Message (Andreas Dilger, 2019-02-25 15:39:43.000000000) ---
Patch Set 2: Code-Review+2

--- Message (James Nunez, 2019-02-25 16:09:53.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Nunez, 2019-02-25 18:12:10.000000000) ---
Topic set to LTS

--- Message (unknown, 2019-02-25 18:17:01.000000000) ---
Change has been successfully cherry-picked as dafe2b93e6f4cb67754e960487e92700d6ec279c by Andreas Dilger
